			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02f: *********************************

IMP: (01/31/05, SMR) Waveform window draws grid dimmer and in the background.  Horizontal grid lines
     are adjusted to 10%, 30%, 50%, 70%, and 90% of actual values.  Panning commands (Ctrl-2-4-6-8)
     now work in waveform window.

IMP: (01/31/05, DN) Simplifications of Undo API.

BUG: (01/31/05, DN) Incorrect calculation of size of Outline primitives in "NodeInst.redoGeometric()"
FIX: Calculate MBB both in parent and in instance coordinates.

IMP: (01/31/05, RK) Removed the compile time limit on the number of transistors that may be combined into a single series stack.

IMP: (01/30/05, DN) DatabaseChangeListener API changed to prepare for transactional database.

IMP/MAN: (01/29/05, DN) JELIB is the default library format.

BUG: (01/29/05, DN) Deleting exports invalidates database invariants (Bug #181).
FIX: In "Export.kill()" disconnect all PortInsts of this Export before deletion.

IMP: (01/29/05, SMR) Shift-right in waveform now zooms (Bug #177).

************************* Version 8.02e: *********************************

IMP/MAN: (01/28/05, GVG) Adding exhaustive checking option in DRC (mostly for regression purposes)

IMP: (01/27/05, GVG) Side effects of ordered database in DRC. Speed improvements
     to avoid checking two node instances multiple time. Some statistics:
     qFourP2:qFourP1top:qFourP1top: v8.01=22 min, v8.02d=37min, v8.02e=8min.

IMP/MAN: (01/27/05, JKG) Added option under GDS preferences to have brackets in
    export names converted to underscores.

IMP/MAN: (01/26/05, GVG) TSMC90nm: thick active contacts including thick active arcs

IMP/MAN: (01/26/05, SMR) Removed the command "Windows / Special Zoom / Zoom Box" because
     it duplicates the shift-right drag function and, more importantly, doesn't work.
